--- a/idtech4/neo/site.conf
+++ b/idtech4/neo/site.conf
@@ -52,7 +52,7 @@ p20
 S'0'
 sS'BASEFLAGS'
 p21
-S'-march=armv5te -fno-builtin-sin -fno-builtin-sinf -fno-builtin-cosf -fno-builtin-cos -mtune=xscale -mfpu=vfp -mfloat-abi=softfp -Wl,--no-undefined -fexceptions -frtti -I/prog/games/dante-es2/libogg/include -L/prog/games/dante-es2/libogg/lib'
+S'-march=armv7-a -fno-builtin-sin -fno-builtin-cos -fno-builtin-sinf -fno-builtin-cosf -mtune=cortex-a9 -mfpu=neon -mfloat-abi=softfp -Wl,--no-undefined -fexceptions -frtti'
 p22
 sS'CXX'
 p23
